# local-semantic-search

./: .gitignore  Fadeev_Anton_defense.pptx  Fadeev_Anton_practice_report.docx  README.md  check_batch_encoding.py  check_image_encoder.py  check_media_scanner.py  check_text_search.py  check_vector_index.py  pyproject.toml
src/semantic_media_search/: main.py
src/semantic_media_search.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/semantic_media_search/domain/: models.py
src/semantic_media_search/indexing/: vector_index.py
src/semantic_media_search/ml/: image_encoder.py
src/semantic_media_search/scanning/: media_scanner.py
