[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-media-search"
version = "0.1.0"
description = "Local semantic search system for media files"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sentence-transformers",
    "Pillow",
    "faiss-cpu",
]

[tool.setuptools.packages.find]
where = ["src"]